--- a/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
+++ b/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.8\build\Microsoft.CodeAnalysis.Analyzers.props" Condition="Exists('..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.8\build\Microsoft.CodeAnalysis.Analyzers.props')" />
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+    <Import Project="..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.8\build\Microsoft.CodeAnalysis.Analyzers.props" Condition="Exists('..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.8\build\Microsoft.CodeAnalysis.Analyzers.props')"/>
+    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
     <PropertyGroup>
         <NoWarn>0659,0660,0661</NoWarn>
     </PropertyGroup>
@@ -66,14 +66,14 @@
             <HintPath>..\assemblies-nw\Mirror.Components.dll</HintPath>
             <Aliases>MirrorComponents</Aliases>
         </Reference>
-        <Reference Include="mscorlib" />
+        <Reference Include="mscorlib"/>
         <Reference Include="NwPluginAPI.Analyzers, Version=12.0.0.0, Culture=neutral, processorArchitecture=Amd64">
-          <HintPath>..\packages\Northwood.PluginAPI.Analyzers.12.0.0-rc.6\lib\netstandard2.0\NwPluginAPI.Analyzers.dll</HintPath>
+            <HintPath>..\packages\Northwood.PluginAPI.Analyzers.12.0.0\lib\netstandard2.0\NwPluginAPI.Analyzers.dll</HintPath>
         </Reference>
         <Reference Include="PluginAPI, Version=12.0.0.0, Culture=neutral, processorArchitecture=Amd64">
-          <HintPath>..\packages\Northwood.PluginAPI.12.0.0-rc.6\lib\net48\PluginAPI.dll</HintPath>
+            <HintPath>..\packages\Northwood.PluginAPI.12.0.0\lib\net48\PluginAPI.dll</HintPath>
         </Reference>
-        <Reference Include="System" />
+        <Reference Include="System"/>
         <Reference Include="System.Buffers, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
             <HintPath>..\packages\System.Buffers.4.4.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
         </Reference>
@@ -83,7 +83,7 @@
         <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
             <HintPath>..\packages\System.Memory.4.5.3\lib\netstandard2.0\System.Memory.dll</HintPath>
         </Reference>
-        <Reference Include="System.Numerics" />
+        <Reference Include="System.Numerics"/>
         <Reference Include="System.Numerics.Vectors, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
             <HintPath>..\packages\System.Numerics.Vectors.4.4.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
         </Reference>
@@ -110,89 +110,89 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="ColorHelper.cs" />
-        <Compile Include="Config\ConfigHelper.cs" />
-        <Compile Include="Config\IMapPoint.cs" />
-        <Compile Include="Config\MapPointByName.cs" />
-        <Compile Include="Config\MapPointByRoomType.cs" />
-        <Compile Include="Config\RoomNameAttribute.cs" />
-        <Compile Include="Config\RoomType.cs" />
-        <Compile Include="Config\SerializedRotation.cs" />
-        <Compile Include="Config\StaticMapPoint.cs" />
-        <Compile Include="Config\Translations\AttributeHandler.cs" />
-        <Compile Include="Config\Translations\RegisterNestedTranslationsAttribute.cs" />
-        <Compile Include="Config\Translations\RegisterStaticTranslationsInTypeAttribute.cs" />
-        <Compile Include="Config\Translations\TranslationAttribute.cs" />
-        <Compile Include="Config\Translations\TranslationHelper.cs" />
-        <Compile Include="Config\Translations\TranslationRegistry.cs" />
-        <Compile Include="EnumeratorWrapping.cs" />
-        <Compile Include="PlayerExtensions.cs" />
-        <Compile Include="Harmony\Attributes\ConstructorPatch.cs" />
-        <Compile Include="Harmony\Attributes\NestedClassPatch.cs" />
-        <Compile Include="Harmony\Attributes\NonPublicPatch.cs" />
-        <Compile Include="Harmony\HarmonyHelper.cs" />
-        <Compile Include="Harmony\InstructionHelper.cs" />
-        <Compile Include="HintQueue.cs" />
-        <Compile Include="PlayerInfo\Containers\CooldownInfo.cs" />
-        <Compile Include="PlayerInfo\Containers\InventoryInfo.cs" />
-        <Compile Include="PlayerInfo\Containers\Scp049SubroutineContainer.cs" />
-        <Compile Include="PlayerInfo\Containers\Scp079SubroutineContainer.cs" />
-        <Compile Include="PlayerInfo\Containers\BasicRoleInfo.cs" />
-        <Compile Include="PlayerInfo\Containers\Scp096SubroutineContainer.cs" />
-        <Compile Include="PlayerInfo\Containers\Scp106SubroutineContainer.cs" />
-        <Compile Include="PlayerInfo\Containers\Scp173SubroutineContainer.cs" />
-        <Compile Include="PlayerInfo\CustomRoleAndInfoWrapper.cs" />
-        <Compile Include="PlayerInfo\Delegates.cs" />
-        <Compile Include="PlayerInfo\Effect\EffectInfoBase.cs" />
-        <Compile Include="PlayerInfo\Effect\EffectType.cs" />
-        <Compile Include="PlayerInfo\Effect\HypothermiaInfo.cs" />
-        <Compile Include="PlayerInfo\Effect\StandardEffectInfo.cs" />
-        <Compile Include="PlayerInfo\IPlayerInfoWithRole.cs" />
-        <Compile Include="PlayerInfo\ItemInfoObtainer.cs" />
-        <Compile Include="PlayerInfo\Item\FirearmInfo.cs" />
-        <Compile Include="PlayerInfo\Item\ItemInfoBase.cs" />
-        <Compile Include="PlayerInfo\Item\JailbirdInfo.cs" />
-        <Compile Include="PlayerInfo\Item\Scp1576Info.cs" />
-        <Compile Include="PlayerInfo\Item\Scp268Info.cs" />
-        <Compile Include="PlayerInfo\Item\UsableItemInfo.cs" />
-        <Compile Include="PlayerInfo\Item\RadioInfo.cs" />
-        <Compile Include="PlayerInfo\Item\Scp330BagInfo.cs" />
-        <Compile Include="PlayerInfo\PlayerInfoBase.cs" />
-        <Compile Include="PlayerInfo\PlayerInfoExtensions.cs" />
-        <Compile Include="PlayerInfo\PlayerInfoObtainer.cs" />
-        <Compile Include="PlayerInfo\RoleTypeAndInfoWrapper.cs" />
-        <Compile Include="PlayerInfo\StandardPlayerInfo.cs" />
-        <Compile Include="PlayerInfo\Vanilla\Scp049Info.cs" />
-        <Compile Include="PlayerInfo\Vanilla\Scp079Info.cs" />
-        <Compile Include="PlayerInfo\Vanilla\Scp096Info.cs" />
-        <Compile Include="PlayerInfo\Vanilla\Scp106Info.cs" />
-        <Compile Include="PlayerInfo\Vanilla\Scp173Info.cs" />
-        <Compile Include="PlayerInfo\Vanilla\Scp939Info.cs" />
-        <Compile Include="Pools\BasicPool.cs" />
-        <Compile Include="Pools\DictionaryPool.cs" />
-        <Compile Include="Pools\IPoolResettable.cs" />
-        <Compile Include="Pools\ListPool.cs" />
-        <Compile Include="Pools\PoolBase.cs" />
-        <Compile Include="Pools\StringBuilderPool.cs" />
-        <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="ReflectionHelper.cs" />
-        <Compile Include="RichTextHelper.cs" />
-        <Compile Include="UnityHelper.cs" />
+        <Compile Include="ColorHelper.cs"/>
+        <Compile Include="Config\ConfigHelper.cs"/>
+        <Compile Include="Config\IMapPoint.cs"/>
+        <Compile Include="Config\MapPointByName.cs"/>
+        <Compile Include="Config\MapPointByRoomType.cs"/>
+        <Compile Include="Config\RoomNameAttribute.cs"/>
+        <Compile Include="Config\RoomType.cs"/>
+        <Compile Include="Config\SerializedRotation.cs"/>
+        <Compile Include="Config\StaticMapPoint.cs"/>
+        <Compile Include="Config\Translations\AttributeHandler.cs"/>
+        <Compile Include="Config\Translations\RegisterNestedTranslationsAttribute.cs"/>
+        <Compile Include="Config\Translations\RegisterStaticTranslationsInTypeAttribute.cs"/>
+        <Compile Include="Config\Translations\TranslationAttribute.cs"/>
+        <Compile Include="Config\Translations\TranslationHelper.cs"/>
+        <Compile Include="Config\Translations\TranslationRegistry.cs"/>
+        <Compile Include="EnumeratorWrapping.cs"/>
+        <Compile Include="PlayerExtensions.cs"/>
+        <Compile Include="Harmony\Attributes\ConstructorPatch.cs"/>
+        <Compile Include="Harmony\Attributes\NestedClassPatch.cs"/>
+        <Compile Include="Harmony\Attributes\NonPublicPatch.cs"/>
+        <Compile Include="Harmony\HarmonyHelper.cs"/>
+        <Compile Include="Harmony\InstructionHelper.cs"/>
+        <Compile Include="HintQueue.cs"/>
+        <Compile Include="PlayerInfo\Containers\CooldownInfo.cs"/>
+        <Compile Include="PlayerInfo\Containers\InventoryInfo.cs"/>
+        <Compile Include="PlayerInfo\Containers\Scp049SubroutineContainer.cs"/>
+        <Compile Include="PlayerInfo\Containers\Scp079SubroutineContainer.cs"/>
+        <Compile Include="PlayerInfo\Containers\BasicRoleInfo.cs"/>
+        <Compile Include="PlayerInfo\Containers\Scp096SubroutineContainer.cs"/>
+        <Compile Include="PlayerInfo\Containers\Scp106SubroutineContainer.cs"/>
+        <Compile Include="PlayerInfo\Containers\Scp173SubroutineContainer.cs"/>
+        <Compile Include="PlayerInfo\CustomRoleAndInfoWrapper.cs"/>
+        <Compile Include="PlayerInfo\Delegates.cs"/>
+        <Compile Include="PlayerInfo\Effect\EffectInfoBase.cs"/>
+        <Compile Include="PlayerInfo\Effect\EffectType.cs"/>
+        <Compile Include="PlayerInfo\Effect\HypothermiaInfo.cs"/>
+        <Compile Include="PlayerInfo\Effect\StandardEffectInfo.cs"/>
+        <Compile Include="PlayerInfo\IPlayerInfoWithRole.cs"/>
+        <Compile Include="PlayerInfo\ItemInfoObtainer.cs"/>
+        <Compile Include="PlayerInfo\Item\FirearmInfo.cs"/>
+        <Compile Include="PlayerInfo\Item\ItemInfoBase.cs"/>
+        <Compile Include="PlayerInfo\Item\JailbirdInfo.cs"/>
+        <Compile Include="PlayerInfo\Item\Scp1576Info.cs"/>
+        <Compile Include="PlayerInfo\Item\Scp268Info.cs"/>
+        <Compile Include="PlayerInfo\Item\UsableItemInfo.cs"/>
+        <Compile Include="PlayerInfo\Item\RadioInfo.cs"/>
+        <Compile Include="PlayerInfo\Item\Scp330BagInfo.cs"/>
+        <Compile Include="PlayerInfo\PlayerInfoBase.cs"/>
+        <Compile Include="PlayerInfo\PlayerInfoExtensions.cs"/>
+        <Compile Include="PlayerInfo\PlayerInfoObtainer.cs"/>
+        <Compile Include="PlayerInfo\RoleTypeAndInfoWrapper.cs"/>
+        <Compile Include="PlayerInfo\StandardPlayerInfo.cs"/>
+        <Compile Include="PlayerInfo\Vanilla\Scp049Info.cs"/>
+        <Compile Include="PlayerInfo\Vanilla\Scp079Info.cs"/>
+        <Compile Include="PlayerInfo\Vanilla\Scp096Info.cs"/>
+        <Compile Include="PlayerInfo\Vanilla\Scp106Info.cs"/>
+        <Compile Include="PlayerInfo\Vanilla\Scp173Info.cs"/>
+        <Compile Include="PlayerInfo\Vanilla\Scp939Info.cs"/>
+        <Compile Include="Pools\BasicPool.cs"/>
+        <Compile Include="Pools\DictionaryPool.cs"/>
+        <Compile Include="Pools\IPoolResettable.cs"/>
+        <Compile Include="Pools\ListPool.cs"/>
+        <Compile Include="Pools\PoolBase.cs"/>
+        <Compile Include="Pools\StringBuilderPool.cs"/>
+        <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="ReflectionHelper.cs"/>
+        <Compile Include="RichTextHelper.cs"/>
+        <Compile Include="UnityHelper.cs"/>
     </ItemGroup>
     <ItemGroup>
-        <None Include="App.config" />
-        <None Include="packages.config" />
+        <None Include="App.config"/>
+        <None Include="packages.config"/>
     </ItemGroup>
     <ItemGroup>
-        <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.8\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
-        <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.8\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
+        <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.8\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll"/>
+        <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.8\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll"/>
     </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
         <PropertyGroup>
             <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them. For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
         </PropertyGroup>
-        <Error Condition="!Exists('..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.8\build\Microsoft.CodeAnalysis.Analyzers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.8\build\Microsoft.CodeAnalysis.Analyzers.props'))" />
+        <Error Condition="!Exists('..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.8\build\Microsoft.CodeAnalysis.Analyzers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeAnalysis.Analyzers.2.9.8\build\Microsoft.CodeAnalysis.Analyzers.props'))"/>
     </Target>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
