--- a/Axwabo.Helpers/Axwabo.Helpers.csproj
+++ b/Axwabo.Helpers/Axwabo.Helpers.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
     <PropertyGroup>
         <NoWarn>0659,0660,0661</NoWarn>
     </PropertyGroup>
@@ -39,133 +39,136 @@
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="0Harmony, Version=2.2.2.0, Culture=neutral, processorArchitecture=MSIL">
-          <HintPath>..\packages\Lib.Harmony.2.2.2\lib\net472\0Harmony.dll</HintPath>
+            <HintPath>..\packages\Lib.Harmony.2.2.2\lib\net472\0Harmony.dll</HintPath>
         </Reference>
         <Reference Include="Assembly-CSharp">
-          <HintPath>..\..\..\Steam\SCPSL\plugins\assemblies\Assembly-CSharp.dll</HintPath>
+            <HintPath>..\..\..\Steam\SCPSL\plugins\assemblies\Assembly-CSharp.dll</HintPath>
+        </Reference>
+        <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+            <HintPath>..\packages\EXILED.6.0.0-beta.25\lib\net48\Assembly-CSharp-Publicized.dll</HintPath>
         </Reference>
         <Reference Include="Assembly-CSharp-firstpass">
-          <HintPath>..\..\..\Steam\SCPSL\plugins\assemblies\Assembly-CSharp-firstpass.dll</HintPath>
+            <HintPath>..\..\..\Steam\SCPSL\plugins\assemblies\Assembly-CSharp-firstpass.dll</HintPath>
         </Reference>
         <Reference Include="CommandSystem.Core, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-          <HintPath>..\packages\EXILED.6.0.0-beta.20\lib\net48\CommandSystem.Core.dll</HintPath>
+            <HintPath>..\packages\EXILED.6.0.0-beta.25\lib\net48\CommandSystem.Core.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.API, Version=6.0.0.0, Culture=neutral, processorArchitecture=Amd64">
-          <HintPath>..\packages\EXILED.6.0.0-beta.20\lib\net48\Exiled.API.dll</HintPath>
+            <HintPath>..\packages\EXILED.6.0.0-beta.25\lib\net48\Exiled.API.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.CreditTags, Version=6.0.0.0, Culture=neutral, processorArchitecture=Amd64">
-          <HintPath>..\packages\EXILED.6.0.0-beta.20\lib\net48\Exiled.CreditTags.dll</HintPath>
+            <HintPath>..\packages\EXILED.6.0.0-beta.25\lib\net48\Exiled.CreditTags.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.CustomItems, Version=6.0.0.0, Culture=neutral, processorArchitecture=Amd64">
-          <HintPath>..\packages\EXILED.6.0.0-beta.20\lib\net48\Exiled.CustomItems.dll</HintPath>
+            <HintPath>..\packages\EXILED.6.0.0-beta.25\lib\net48\Exiled.CustomItems.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.CustomRoles, Version=6.0.0.0, Culture=neutral, processorArchitecture=Amd64">
-          <HintPath>..\packages\EXILED.6.0.0-beta.20\lib\net48\Exiled.CustomRoles.dll</HintPath>
+            <HintPath>..\packages\EXILED.6.0.0-beta.25\lib\net48\Exiled.CustomRoles.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.Events, Version=6.0.0.0, Culture=neutral, processorArchitecture=Amd64">
-          <HintPath>..\packages\EXILED.6.0.0-beta.20\lib\net48\Exiled.Events.dll</HintPath>
+            <HintPath>..\packages\EXILED.6.0.0-beta.25\lib\net48\Exiled.Events.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.Loader, Version=6.0.0.0, Culture=neutral, processorArchitecture=Amd64">
-          <HintPath>..\packages\EXILED.6.0.0-beta.20\lib\net48\Exiled.Loader.dll</HintPath>
+            <HintPath>..\packages\EXILED.6.0.0-beta.25\lib\net48\Exiled.Loader.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.Permissions, Version=6.0.0.0, Culture=neutral, processorArchitecture=Amd64">
-          <HintPath>..\packages\EXILED.6.0.0-beta.20\lib\net48\Exiled.Permissions.dll</HintPath>
+            <HintPath>..\packages\EXILED.6.0.0-beta.25\lib\net48\Exiled.Permissions.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.Updater, Version=3.1.1.0, Culture=neutral, processorArchitecture=Amd64">
-          <HintPath>..\packages\EXILED.6.0.0-beta.20\lib\net48\Exiled.Updater.dll</HintPath>
+            <HintPath>..\packages\EXILED.6.0.0-beta.25\lib\net48\Exiled.Updater.dll</HintPath>
         </Reference>
         <Reference Include="Mirror, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
             <HintPath>..\assemblies\Mirror.dll</HintPath>
         </Reference>
         <Reference Include="NorthwoodLib, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
-          <HintPath>..\packages\EXILED.6.0.0-beta.20\lib\net48\NorthwoodLib.dll</HintPath>
+            <HintPath>..\packages\EXILED.6.0.0-beta.25\lib\net48\NorthwoodLib.dll</HintPath>
         </Reference>
         <Reference Include="PluginAPI, Version=12.0.0.0, Culture=neutral, processorArchitecture=Amd64">
-          <HintPath>..\packages\EXILED.6.0.0-beta.20\lib\net48\PluginAPI.dll</HintPath>
+            <HintPath>..\packages\EXILED.6.0.0-beta.25\lib\net48\PluginAPI.dll</HintPath>
         </Reference>
-        <Reference Include="System" />
+        <Reference Include="System"/>
         <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\assemblies\UnityEngine.dll</HintPath>
+            <HintPath>..\assemblies\UnityEngine.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\assemblies\UnityEngine.CoreModule.dll</HintPath>
+            <HintPath>..\assemblies\UnityEngine.CoreModule.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.PhysicsModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\assemblies\UnityEngine.PhysicsModule.dll</HintPath>
+            <HintPath>..\assemblies\UnityEngine.PhysicsModule.dll</HintPath>
         </Reference>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Config\ConfigHelper.cs" />
-        <Compile Include="Config\IMapPoint.cs" />
-        <Compile Include="Config\MapPointByName.cs" />
-        <Compile Include="Config\MapPointByRoomType.cs" />
-        <Compile Include="Config\SerializedRotation.cs" />
-        <Compile Include="Config\StaticMapPoint.cs" />
-        <Compile Include="Config\Translations\AttributeHandler.cs" />
-        <Compile Include="Config\Translations\RegisterNestedTranslationsAttribute.cs" />
-        <Compile Include="Config\Translations\RegisterStaticTranslationsInTypeAttribute.cs" />
-        <Compile Include="Config\Translations\TranslationAttribute.cs" />
-        <Compile Include="Config\Translations\TranslationHelper.cs" />
-        <Compile Include="Config\Translations\TranslationRegistry.cs" />
-        <Compile Include="EnumeratorWrapping.cs" />
-        <Compile Include="ExiledPlayerExtensions.cs" />
-        <Compile Include="Harmony\Attributes\ConstructorPatch.cs" />
-        <Compile Include="Harmony\Attributes\NestedClassPatch.cs" />
-        <Compile Include="Harmony\Attributes\NonPublicPatch.cs" />
-        <Compile Include="Harmony\HarmonyHelper.cs" />
-        <Compile Include="Harmony\InstructionHelper.cs" />
-        <Compile Include="ColorHelper.cs" />
-        <Compile Include="HintQueue.cs" />
-        <Compile Include="PlayerInfo\Containers\BasicRoleInfo.cs" />
-        <Compile Include="PlayerInfo\Containers\CooldownInfo.cs" />
-        <Compile Include="PlayerInfo\Containers\InventoryInfo.cs" />
-        <Compile Include="PlayerInfo\Containers\Scp049SubroutineContainer.cs" />
-        <Compile Include="PlayerInfo\Containers\Scp079SubroutineContainer.cs" />
-        <Compile Include="PlayerInfo\Containers\Scp096SubroutineContainer.cs" />
-        <Compile Include="PlayerInfo\Containers\Scp106SubroutineContainer.cs" />
-        <Compile Include="PlayerInfo\Containers\Scp173SubroutineContainer.cs" />
-        <Compile Include="PlayerInfo\CustomRoleAndInfoWrapper.cs" />
-        <Compile Include="PlayerInfo\Delegates.cs" />
-        <Compile Include="PlayerInfo\Effect\EffectInfoBase.cs" />
-        <Compile Include="PlayerInfo\Effect\EffectType.cs" />
-        <Compile Include="PlayerInfo\Effect\HypothermiaInfo.cs" />
-        <Compile Include="PlayerInfo\Effect\StandardEffectInfo.cs" />
-        <Compile Include="PlayerInfo\IPlayerInfoWithRole.cs" />
-        <Compile Include="PlayerInfo\ItemInfoObtainer.cs" />
-        <Compile Include="PlayerInfo\Item\FirearmInfo.cs" />
-        <Compile Include="PlayerInfo\Item\ItemInfoBase.cs" />
-        <Compile Include="PlayerInfo\Item\JailbirdInfo.cs" />
-        <Compile Include="PlayerInfo\Item\RadioInfo.cs" />
-        <Compile Include="PlayerInfo\Item\Scp1576Info.cs" />
-        <Compile Include="PlayerInfo\Item\Scp268Info.cs" />
-        <Compile Include="PlayerInfo\Item\Scp330BagInfo.cs" />
-        <Compile Include="PlayerInfo\Item\UsableItemInfo.cs" />
-        <Compile Include="PlayerInfo\PlayerInfoBase.cs" />
-        <Compile Include="PlayerInfo\PlayerInfoExtensions.cs" />
-        <Compile Include="PlayerInfo\PlayerInfoObtainer.cs" />
-        <Compile Include="PlayerInfo\RoleTypeAndInfoWrapper.cs" />
-        <Compile Include="PlayerInfo\StandardPlayerInfo.cs" />
-        <Compile Include="PlayerInfo\Vanilla\Scp049Info.cs" />
-        <Compile Include="PlayerInfo\Vanilla\Scp079Info.cs" />
-        <Compile Include="PlayerInfo\Vanilla\Scp096Info.cs" />
-        <Compile Include="PlayerInfo\Vanilla\Scp106Info.cs" />
-        <Compile Include="PlayerInfo\Vanilla\Scp173Info.cs" />
-        <Compile Include="PlayerInfo\Vanilla\Scp939Info.cs" />
-        <Compile Include="Pools\BasicPool.cs" />
-        <Compile Include="Pools\DictionaryPool.cs" />
-        <Compile Include="Pools\PoolBase.cs" />
-        <Compile Include="Pools\IPoolResettable.cs" />
-        <Compile Include="Pools\ListPool.cs" />
-        <Compile Include="Pools\StringBuilderPool.cs" />
-        <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="ReflectionHelper.cs" />
-        <Compile Include="RichTextHelper.cs" />
-        <Compile Include="UnityHelper.cs" />
+        <Compile Include="Config\ConfigHelper.cs"/>
+        <Compile Include="Config\IMapPoint.cs"/>
+        <Compile Include="Config\MapPointByName.cs"/>
+        <Compile Include="Config\MapPointByRoomType.cs"/>
+        <Compile Include="Config\SerializedRotation.cs"/>
+        <Compile Include="Config\StaticMapPoint.cs"/>
+        <Compile Include="Config\Translations\AttributeHandler.cs"/>
+        <Compile Include="Config\Translations\RegisterNestedTranslationsAttribute.cs"/>
+        <Compile Include="Config\Translations\RegisterStaticTranslationsInTypeAttribute.cs"/>
+        <Compile Include="Config\Translations\TranslationAttribute.cs"/>
+        <Compile Include="Config\Translations\TranslationHelper.cs"/>
+        <Compile Include="Config\Translations\TranslationRegistry.cs"/>
+        <Compile Include="EnumeratorWrapping.cs"/>
+        <Compile Include="ExiledPlayerExtensions.cs"/>
+        <Compile Include="Harmony\Attributes\ConstructorPatch.cs"/>
+        <Compile Include="Harmony\Attributes\NestedClassPatch.cs"/>
+        <Compile Include="Harmony\Attributes\NonPublicPatch.cs"/>
+        <Compile Include="Harmony\HarmonyHelper.cs"/>
+        <Compile Include="Harmony\InstructionHelper.cs"/>
+        <Compile Include="ColorHelper.cs"/>
+        <Compile Include="HintQueue.cs"/>
+        <Compile Include="PlayerInfo\Containers\BasicRoleInfo.cs"/>
+        <Compile Include="PlayerInfo\Containers\CooldownInfo.cs"/>
+        <Compile Include="PlayerInfo\Containers\InventoryInfo.cs"/>
+        <Compile Include="PlayerInfo\Containers\Scp049SubroutineContainer.cs"/>
+        <Compile Include="PlayerInfo\Containers\Scp079SubroutineContainer.cs"/>
+        <Compile Include="PlayerInfo\Containers\Scp096SubroutineContainer.cs"/>
+        <Compile Include="PlayerInfo\Containers\Scp106SubroutineContainer.cs"/>
+        <Compile Include="PlayerInfo\Containers\Scp173SubroutineContainer.cs"/>
+        <Compile Include="PlayerInfo\CustomRoleAndInfoWrapper.cs"/>
+        <Compile Include="PlayerInfo\Delegates.cs"/>
+        <Compile Include="PlayerInfo\Effect\EffectInfoBase.cs"/>
+        <Compile Include="PlayerInfo\Effect\EffectType.cs"/>
+        <Compile Include="PlayerInfo\Effect\HypothermiaInfo.cs"/>
+        <Compile Include="PlayerInfo\Effect\StandardEffectInfo.cs"/>
+        <Compile Include="PlayerInfo\IPlayerInfoWithRole.cs"/>
+        <Compile Include="PlayerInfo\ItemInfoObtainer.cs"/>
+        <Compile Include="PlayerInfo\Item\FirearmInfo.cs"/>
+        <Compile Include="PlayerInfo\Item\ItemInfoBase.cs"/>
+        <Compile Include="PlayerInfo\Item\JailbirdInfo.cs"/>
+        <Compile Include="PlayerInfo\Item\RadioInfo.cs"/>
+        <Compile Include="PlayerInfo\Item\Scp1576Info.cs"/>
+        <Compile Include="PlayerInfo\Item\Scp268Info.cs"/>
+        <Compile Include="PlayerInfo\Item\Scp330BagInfo.cs"/>
+        <Compile Include="PlayerInfo\Item\UsableItemInfo.cs"/>
+        <Compile Include="PlayerInfo\PlayerInfoBase.cs"/>
+        <Compile Include="PlayerInfo\PlayerInfoExtensions.cs"/>
+        <Compile Include="PlayerInfo\PlayerInfoObtainer.cs"/>
+        <Compile Include="PlayerInfo\RoleTypeAndInfoWrapper.cs"/>
+        <Compile Include="PlayerInfo\StandardPlayerInfo.cs"/>
+        <Compile Include="PlayerInfo\Vanilla\Scp049Info.cs"/>
+        <Compile Include="PlayerInfo\Vanilla\Scp079Info.cs"/>
+        <Compile Include="PlayerInfo\Vanilla\Scp096Info.cs"/>
+        <Compile Include="PlayerInfo\Vanilla\Scp106Info.cs"/>
+        <Compile Include="PlayerInfo\Vanilla\Scp173Info.cs"/>
+        <Compile Include="PlayerInfo\Vanilla\Scp939Info.cs"/>
+        <Compile Include="Pools\BasicPool.cs"/>
+        <Compile Include="Pools\DictionaryPool.cs"/>
+        <Compile Include="Pools\PoolBase.cs"/>
+        <Compile Include="Pools\IPoolResettable.cs"/>
+        <Compile Include="Pools\ListPool.cs"/>
+        <Compile Include="Pools\StringBuilderPool.cs"/>
+        <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="ReflectionHelper.cs"/>
+        <Compile Include="RichTextHelper.cs"/>
+        <Compile Include="UnityHelper.cs"/>
     </ItemGroup>
     <ItemGroup>
-      <None Include="App.config" />
-      <None Include="packages.config" />
+        <None Include="App.config"/>
+        <None Include="packages.config"/>
     </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
 
 </Project>
